--- a/CV.css
+++ b/CV.css
@@ -1,6 +1,6 @@
 .prenom
 {
-    color: #1947CF;
+    color: #0D47A1;
     font-size: 30px;
 }
 .nom 
@@ -9,26 +9,26 @@
 }
 .devel
 {
-    border-bottom: solid 2px #1947CF;
+    border-bottom: solid 2px #0D47A1;
 }
 nav h2
 {
-    color: #1947CF;
-    background-color:#000000;
+    color: #0D47A1;
+    background-color:#212121;
     text-align: center;
     font-size: 20px;
 }
 
 main .fas 
 {
-    color: #1947CF;
+    color: #0D47A1;
     margin-right: 25px;
 }
 nav .fas {
     display: flex;
     justify-content: center;
     font-size: 25px;
-    color: #000000
+    color: #212121
 }
 body 
 {
@@ -46,7 +46,7 @@ ul {
 .point {
     width: 7px;
     height: 7px;
-    background:#1947CF;
+    background: #0D47A1;
     border-radius: 50%;
     padding: 1px;
     background-clip: content-box;
@@ -65,9 +65,9 @@ ul {
 .point1 {
     width: 5px;
     height: 5px;
-    background: #1947CF;
+    background: #0D47A1;
     border-radius: 50%;
-    border: 1px #1947CF solid;
+    border: 1px #0D47A1 solid;
     padding: 1px;
     background-clip: content-box;
     margin-top: 4px;
@@ -94,7 +94,7 @@ body {
 }
 nav {
     width: 300px ;
-    background: #1947CF ;
+    background: #0D47A1 ;
 }
 main {
     flex: 1;
@@ -102,7 +102,7 @@ main {
     margin-right: 50px;
 }
 main h2 {
-    border-bottom: solid 2px #1947CF;
+    border-bottom: solid 2px #0D47A1;
 }
 nav p {
     font-size: 15px;
@@ -156,9 +156,9 @@ main p {
     align-items: center;
     width: 50px;
     height: 50px;
-    border: 2px solid #000000;
+    border: 2px solid #212121;
     border-radius: 50%;
-    color: #000000;
+    color: #212121;
     margin: auto;
 }
 .a_propos {
